
IF(WIN32)
  SET( WINDOWS 1 )
ELSE(WIN32)
  SET( UNIX_VARIANT 1 )
ENDIF(WIN32)

SET( TESTING_FIXTURES_PATH 1 )
SET( SRC_PATH 1 )

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)

IF(CMAKE_COMPILER_IS_GNUCXX)
  SET(CMAKE_CXX_FLAGS "-Wall -Wextra")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../libs/ )

FILE(GLOB SPINNY_CPP_SRC "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

REMOVE( SQLITE_C_SRC shell.c main.c )

ADD_EXECUTABLE( spinny main.cxx )

ADD_LIBRARY( libspinny ${SPINNY_CPP_SRC} )

TARGET_LINK_LIBRARIES( spinny sqlite boost id3lib zlib libspinny ews )

IF( HAVE_PTHREAD_H )
  TARGET_LINK_LIBRARIES( spinny pthread )
ENDIF( HAVE_PTHREAD_H )

