
IF(CMAKE_COMPILER_IS_GNUCXX)
  SET(CMAKE_CXX_FLAGS "-Wall -Wextra -g")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/../libs/
  ${CMAKE_CURRENT_BINARY_DIR}/../libs/
)

ADD_EXECUTABLE( spinny main.cpp )

TARGET_LINK_LIBRARIES( spinny  libspinny id3lib zlib sqlite  ews boost unit_test cs handlers )

IF( HAVE_PTHREAD_H )
  TARGET_LINK_LIBRARIES( spinny pthread )
ENDIF( HAVE_PTHREAD_H )

