
IF(NOT WIN32)
  SET(CMAKE_C_FLAGS "-Wall -Wextra -g")
  SET(CMAKE_CXX_FLAGS "-Wall -Wextra -g")
ENDIF(NOT WIN32)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/../libs/
  ${CMAKE_CURRENT_BINARY_DIR}/../libs/
)

IF(CMAKE_COMPILER_IS_GNUCXX)
   ADD_EXECUTABLE( spinny posix_main.cpp )
ELSE(CMAKE_COMPILER_IS_GNUCXX)
   ADD_EXECUTABLE( spinny win_main.cpp )
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

TARGET_LINK_LIBRARIES( spinny handlers json ews libspinny taglib zlib sqlite unit_test cs boost )

IF( HAVE_PTHREAD_H )
  TARGET_LINK_LIBRARIES( spinny pthread )
ENDIF( HAVE_PTHREAD_H )

