FILE(GLOB BOOST_PO_SRC "${CMAKE_CURRENT_SOURCE_DIR}/src/program_options/*.cpp")
FILE(GLOB BOOST_LOG_SRC "${CMAKE_CURRENT_SOURCE_DIR}/src/log/*.cpp")
FILE(GLOB BOOST_REGEX_SRC "${CMAKE_CURRENT_SOURCE_DIR}/src/regex/*.cpp")
FILE(GLOB BOOST_THREAD_SRC "${CMAKE_CURRENT_SOURCE_DIR}/src/thread/*.cpp")
FILE(GLOB BOOST_FILESYS_SRC "${CMAKE_CURRENT_SOURCE_DIR}/src/filesystem/*.cpp")

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/../ )

ADD_LIBRARY( boost
  ${BOOST_THREAD_SRC}
  ${BOOST_LOG_SRC}
  ${BOOST_REGEX_SRC}
  ${BOOST_FILESYS_SRC}
  ${BOOST_PO_SRC}
)

