file(GLOB CLEAR_SILVER_C_SRC "${CMAKE_CURRENT_SOURCE_DIR}/*.c")


INCLUDE (CheckIncludeFiles)
INCLUDE (CheckFunctionExists)
INCLUDE (CheckTypeSize)

CHECK_FUNCTION_EXISTS( snprintf HAVE_SNPRINTF )
CHECK_FUNCTION_EXISTS( vsnprintf HAVE_VSNPRINTF )
CHECK_FUNCTION_EXISTS( strtock_r HAVE_STRTOK_R )
CHECK_FUNCTION_EXISTS( localtime_r HAVE_LOCALTIME_R )
CHECK_FUNCTION_EXISTS( gmtime_r HAVE_GMTIME_R )
CHECK_FUNCTION_EXISTS( mkstemp HAVE_MKSTEMP )
CHECK_INCLUDE_FILES(    regex.h HAVE_REGEX )
CHECK_INCLUDE_FILES(    pthread.h HAVE_PTHREADS )
CHECK_FUNCTION_EXISTS( lockf HAVE_LOCKF )
CHECK_FUNCTION_EXISTS( gettext ENABLE_GETTEXT )
CHECK_INCLUDE_FILES(    dirent.h HAVE_DIRENT_H )
CHECK_FUNCTION_EXISTS( _doprnt HAVE_DOPRNT )
CHECK_FUNCTION_EXISTS( drand48 HAVE_DRAND48 )
CHECK_INCLUDE_FILES(    fcntl.h HAVE_FCNTL_H )
CHECK_FUNCTION_EXISTS( gettimeofday HAVE_GETTIMEOFDAY )
CHECK_FUNCTION_EXISTS( gmtime_r HAVE_GMTIME_R )
CHECK_INCLUDE_FILES(    inttypes.h HAVE_INTTYPES_H )
CHECK_INCLUDE_FILES(    limits.h HAVE_LIMITS_H )
CHECK_FUNCTION_EXISTS( localtime_r HAVE_LOCALTIME_R )
CHECK_INCLUDE_FILES(    memory.h HAVE_MEMORY_H )
CHECK_FUNCTION_EXISTS( mktime HAVE_MKTIME )
CHECK_INCLUDE_FILES(    ndir.h HAVE_NDIR_H )
CHECK_FUNCTION_EXISTS( putenv HAVE_PUTENV )
CHECK_FUNCTION_EXISTS( rand HAVE_RAND )
CHECK_FUNCTION_EXISTS( random HAVE_RANDOM )
CHECK_INCLUDE_FILES( stdarg.h HAVE_STDARG_H )
CHECK_INCLUDE_FILES( stdint.h HAVE_STDINT_H )
CHECK_INCLUDE_FILES( stdlib.h HAVE_STDLIB_H )
CHECK_FUNCTION_EXISTS( strerror HAVE_STRERROR )
CHECK_FUNCTION_EXISTS( strftime HAVE_STRFTIME )
CHECK_INCLUDE_FILES( strings.h HAVE_STRINGS_H )
CHECK_INCLUDE_FILES( string.h HAVE_STRING_H )
CHECK_FUNCTION_EXISTS( strspn HAVE_STRSPN )
CHECK_FUNCTION_EXISTS( strtod HAVE_STRTOD )
CHECK_FUNCTION_EXISTS( strtok_r HAVE_STRTOK_R )
CHECK_FUNCTION_EXISTS( strtol HAVE_STRTOL )
CHECK_FUNCTION_EXISTS( strtoul HAVE_STRTOUL )
CHECK_INCLUDE_FILES( sys/dir.h HAVE_SYS_DIR_H )
CHECK_INCLUDE_FILES( sys/ioctl.h HAVE_SYS_IOCTL_H )
CHECK_INCLUDE_FILES( sys/ndir.h HAVE_SYS_NDIR_H )
CHECK_INCLUDE_FILES( sys/stat.h HAVE_SYS_STAT_H )
CHECK_INCLUDE_FILES( sys/time.h HAVE_SYS_TIME_H )
CHECK_INCLUDE_FILES( sys/types.h HAVE_SYS_TYPES_H )
CHECK_INCLUDE_FILES( sys/wait.h HAVE_SYS_WAIT_H )
CHECK_INCLUDE_FILES( unistd.h HAVE_UNISTD_H )
CHECK_INCLUDE_FILES( varargs.h HAVE_VARARGS_H )
CHECK_INCLUDE_FILES( vprintf HAVE_VPRINTF )
CHECK_FUNCTION_EXISTS( wait3 HAVE_WAIT3 )


# SET( CMAKE_C_FLAGS "-DHAVE_CONFIG_H ${CMAKE_C_FLAGS}")

# SET(CMAKE_EXTRA_INCLUDE_FILES types.h)
#CHECK_TYPE_SIZE( 
#SET(CMAKE_EXTRA_INCLUDE_FILES)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/cs_config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/cs_config.h)

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/mpglib ${CMAKE_CURRENT_BINARY_DIR}  )

ADD_LIBRARY( cs ${CLEAR_SILVER_C_SRC} )
