FILE(GLOB GOOGLE_CPP_SRC "${CMAKE_CURRENT_SOURCE_DIR}/*.cc")

INCLUDE (CheckIncludeFiles)
INCLUDE (CheckTypeSize)
INCLUDE (CheckFunctionExists)

CHECK_TYPE_SIZE(u_int16_t HAVE_U_INT16_T )
CHECK_TYPE_SIZE(__uint16 HAVE___UINT16 )
CHECK_TYPE_SIZE("long long" HAVE_LONG_LONG )
CHECK_INCLUDE_FILES(stdint.h HAVE_STDINT_H )
CHECK_INCLUDE_FILES(sys/types.h HAVE_SYS_TYPES_H )
CHECK_INCLUDE_FILES(inttypes.h HAVE_INTTYPES_H )
CHECK_FUNCTION_EXISTS( memcpy HAVE_MEMCPY )
CHECK_INCLUDE_FILES( stdint.h HAVE_STDINT_H )

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/sparsehash/config.h)

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/../ )

# ADD_LIBRARY( google ${GOOGLE_CPP_SRC} )
