IF(CMAKE_COMPILER_IS_GNUCXX)
  SET(CMAKE_CXX_FLAGS "-g -Wall -Wextra")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

INCLUDE (CheckIncludeFiles)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/src/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)

FILE(GLOB ID3LIB_SRC "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../ )

ADD_LIBRARY( id3lib ${ID3LIB_SRC} )
