IF(NOT WIN32)
  SET(CMAKE_C_FLAGS "-Wall -Wextra -g")
  SET(CMAKE_CXX_FLAGS "-Wall -Wextra -g")
ENDIF(NOT WIN32)


file(GLOB LAME_C_SRC "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
#file(GLOB HIP_C_SRC "${CMAKE_CURRENT_SOURCE_DIR}/hip/*.c")



INCLUDE (CheckIncludeFiles)
INCLUDE (CheckFunctionExists)
INCLUDE (CheckTypeSize)
CHECK_INCLUDE_FILES( alloca.h HAVE_ALLOCA_H )
CHECK_FUNCTION_EXISTS( alloca HAVE_ALLOCA )
CHECK_INCLUDE_FILES( dlfcn.h HAVE_DLFCN_H )
CHECK_INCLUDE_FILES( errno.h HAVE_ERRNO_H )
CHECK_INCLUDE_FILES( fcntl.h HAVE_FCNTL_H )
CHECK_FUNCTION_EXISTS( gettimeofday HAVE_GETTIMEOFDAY )
CHECK_INCLUDE_FILES( inttypes.h HAVE_INTTYPES_H 1 )
CHECK_INCLUDE_FILES( limits.h HAVE_LIMITS_H )
CHECK_INCLUDE_FILES( linux/soundcard.h HAVE_LINUX_SOUNDCARD_H )
CHECK_INCLUDE_FILES( memory.h HAVE_MEMORY_H )
CHECK_INCLUDE_FILES( ncurses/termcap.h HAVE_NCURSES_TERMCAP_H )
CHECK_FUNCTION_EXISTS( socket HAVE_SOCKET )
CHECK_INCLUDE_FILES( stdint.h HAVE_STDINT_H )
CHECK_INCLUDE_FILES( stdlib.h HAVE_STDLIB_H )
CHECK_INCLUDE_FILES( strings.h HAVE_STRINGS_H )
CHECK_INCLUDE_FILES( string.h HAVE_STRING_H )
CHECK_FUNCTION_EXISTS( strtol HAVE_STRTOL )
CHECK_INCLUDE_FILES(sys/soundcard.h HAVE_SYS_SOUNDCARD_H )
CHECK_INCLUDE_FILES(sys/stat.h HAVE_SYS_STAT_H )
CHECK_INCLUDE_FILES(sys/time.h HAVE_SYS_TIME_H )
CHECK_INCLUDE_FILES(sys/types.h HAVE_SYS_TYPES_H )
CHECK_INCLUDE_FILES(unistd.h HAVE_UNISTD_H )


SET(CMAKE_C_FLAGS "-DHAVE_CONFIG_H ${CMAKE_C_FLAGS}")

# SET(CMAKE_EXTRA_INCLUDE_FILES types.h)
#CHECK_TYPE_SIZE( 
#SET(CMAKE_EXTRA_INCLUDE_FILES)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)

#
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../ ${CMAKE_CURRENT_BINARY_DIR} )
# ${HIP_C_SRC}
ADD_LIBRARY( lame ${LAME_C_SRC} )

#ADD_EXECUTABLE( lametest test.cpp ${LAME_C_SRC} ${HIP_C_SRC} )
#TARGET_LINK_LIBRARIES( lametest boost )
