
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)

IF(CMAKE_COMPILER_IS_GNUCXX)
  SET(CMAKE_CXX_FLAGS "-Wall -Wextra")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
INCLUDE_DIRECTORIES( 
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/../
  ${CMAKE_CURRENT_BINARY_DIR}/
  ${CMAKE_CURRENT_BINARY_DIR}/../
)


INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/../libs/ ${CMAKE_CURRENT_BINARY_DIR}/../libs/ )

FILE(GLOB CPP_SRC "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

ADD_LIBRARY( libspinny ${CPP_SRC} )
