IF(CMAKE_COMPILER_IS_GNUCXX)
  SET(CMAKE_CXX_FLAGS "-Wall -Wextra")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
INCLUDE_DIRECTORIES( 
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/../
  ${CMAKE_CURRENT_BINARY_DIR}/
  ${CMAKE_CURRENT_BINARY_DIR}/../
)


FILE(GLOB CPP_SRC "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
FILE(GLOB C_SRC "${CMAKE_CURRENT_SOURCE_DIR}/csrc/*.c")

ADD_LIBRARY( sqlite ${CPP_SRC} ${C_SRC} )

ADD_EXECUTABLE( cmdline csrc/main.c )
TARGET_LINK_LIBRARIES( cmdline sqlite )
