IF(CMAKE_COMPILER_IS_GNUCXX)
  SET(CMAKE_CXX_FLAGS "-Wall -Wextra")
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/../ ${CMAKE_CURRENT_BINARY_DIR}/../ )

#FILE(GLOB MPEGLIB_SRC "${CMAKE_CURRENT_SOURCE_DIR}/mpg123/*.c")

FILE(GLOB CPP_SRC "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

ADD_LIBRARY( streaming ${C_SRC} ${CPP_SRC} )
#${MPEGLIB_SRC} 
# ADD_EXECUTABLE( decode mpg123/test.c )
#TARGET_LINK_LIBRARIES( decode streaming m )
 